force-app/main/default/objects/OM_Callback__c/OM_Callback__c.object-meta.xml
<CustomObject>
    <label>Llamada Saliente</label>
    <nameField>
        <displayFormat>CB - {0000000}</displayFormat>
        <label>Llamada Saliente Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Llamadas Salientes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>