force-app/main/default/objects/OM_Callback__c/fields/OM_Account__c.field-meta.xml
<CustomField>
    <fullName>OM_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>OM_Callbacks</relationshipName>
    <type>Lookup</type>
</CustomField>