force-app/main/default/objects/OM_Callback__c/fields/OM_AttempsNumber__c.field-meta.xml
<CustomField>
    <fullName>OM_AttempsNumber__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Número de intentos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>