force-app/main/default/objects/OM_Callback__c/fields/OM_Case__c.field-meta.xml
<CustomField>
    <fullName>OM_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>OM_Callbacks</relationshipName>
    <type>Lookup</type>
</CustomField>