force-app/main/default/objects/OM_Callback__c/fields/OM_Comments__c.field-meta.xml
<CustomField>
    <fullName>OM_Comments__c</fullName>
    <label>Comentarios</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>