force-app/main/default/objects/OM_Callback__c/fields/OM_Contract__c.field-meta.xml
<CustomField>
    <fullName>OM_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expediente</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Llamadas Salientes</relationshipLabel>
    <relationshipName>Llamadas_Salientes</relationshipName>
    <type>Lookup</type>
</CustomField>