force-app/main/default/objects/OM_Callback__c/fields/OM_EndDate__c.field-meta.xml
<CustomField>
    <fullName>OM_EndDate__c</fullName>
    <label>Fecha de fin</label>
    <type>DateTime</type>
</CustomField>