force-app/main/default/objects/OM_Callback__c/fields/OM_FormattedPhone__c.field-meta.xml
<CustomField>
    <fullName>OM_FormattedPhone__c</fullName>
    <formula>IF(LEFT( OM_Phone__c , 1)=&quot;+&quot;, OM_Phone__c , &quot;+34&quot; &amp; OM_Phone__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formatted Phone</label>
    <type>Text</type>
</CustomField>