force-app/main/default/objects/OM_Callback__c/fields/OM_Lead__c.field-meta.xml
<CustomField>
    <fullName>OM_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Llamadas Salientes</relationshipLabel>
    <relationshipName>Llamadas_Salientes</relationshipName>
    <type>Lookup</type>
</CustomField>