force-app/main/default/objects/OM_Callback__c/fields/OM_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>OM_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>OM_Callbacks</relationshipName>
    <type>Lookup</type>
</CustomField>