force-app/main/default/objects/OM_Callback__c/fields/OM_OriginQueue__c.field-meta.xml
<CustomField>
    <fullName>OM_OriginQueue__c</fullName>
    <description>Se almacena el nombre de la cola a la que se ha asignado la llamada que ha originado el callback.</description>
    <label>Cola origen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>