force-app/main/default/objects/OM_Callback__c/fields/OM_OwnerQueue__c.field-meta.xml
<CustomField>
    <fullName>OM_OwnerQueue__c</fullName>
    <label>Propietario (Cola)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>