force-app/main/default/objects/OM_Callback__c/fields/OM_PreviousCB__c.field-meta.xml
<CustomField>
    <fullName>OM_PreviousCB__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intento anterior</label>
    <referenceTo>OM_Callback__c</referenceTo>
    <relationshipLabel>Llamadas Salientes</relationshipLabel>
    <relationshipName>OM_Callbacks</relationshipName>
    <type>Lookup</type>
</CustomField>