force-app/main/default/objects/OM_Callback__c/fields/OM_RetryLimit__c.field-meta.xml
<CustomField>
    <fullName>OM_RetryLimit__c</fullName>
    <description>Indica el número máximo de reintentos de llamada permitidos</description>
    <formula>IF( RecordType.DeveloperName = &apos;OM_OutboundCallback&apos;,$CustomMetadata.OM_CallRetriesSettings__mdt.OutboundCall.OM_RetryLimit__c,$CustomMetadata.OM_CallRetriesSettings__mdt.Callback.OM_RetryLimit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Límite de reintentos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>