force-app/main/default/objects/OM_Callback__c/fields/OM_RetryOffset__c.field-meta.xml
<CustomField>
    <fullName>OM_RetryOffset__c</fullName>
    <description>Tiempo (en minutos) que debe pasar desde que no se localiza a un cliente hasta que comienza el siguiente intento.</description>
    <formula>IF( RecordType.DeveloperName = &apos;OM_OutboundCallback&apos;,$CustomMetadata.OM_CallRetriesSettings__mdt.OutboundCall.OM_NextRetryOffset__c,$CustomMetadata.OM_CallRetriesSettings__mdt.Callback.OM_NextRetryOffset__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offset reintentos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>