force-app/main/default/objects/OM_Callback__c/fields/OM_RTDevName__c.field-meta.xml
<CustomField>
    <fullName>OM_RTDevName__c</fullName>
    <description>Obtiene el developername del RT para utilizarlo en flows</description>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RT DevName</label>
    <type>Text</type>
</CustomField>