force-app/main/default/objects/OM_Callback__c/fields/OM_ScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>OM_ScheduledDate__c</fullName>
    <label>Fecha programada</label>
    <type>DateTime</type>
</CustomField>