force-app/main/default/objects/OM_Callback__c/fields/OM_StartDate__c.field-meta.xml
<CustomField>
    <fullName>OM_StartDate__c</fullName>
    <label>Fecha de inicio</label>
    <type>DateTime</type>
</CustomField>