force-app/main/default/objects/OM_Callback__c/fields/OM_Type__c.field-meta.xml
<CustomField>
    <fullName>OM_Type__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Autocita</fullName>
            </value>
            <value>
                <fullName>Fuera de horario</fullName>
            </value>
            <value>
                <fullName>Fuera de horario (bot)</fullName>
            </value>
            <value>
                <fullName>Llamada abandonada</fullName>
            </value>
            <value>
                <fullName>Llamada planificada por un agente</fullName>
            </value>
            <value>
                <fullName>Reintentos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>