force-app/main/default/objects/OM_Callback__c/fields/OM_VoiceCall__c.field-meta.xml
<CustomField>
    <fullName>OM_VoiceCall__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Llamada entrante que ha originado el Callback</inlineHelpText>
    <label>Llamada origen</label>
    <referenceTo>VoiceCall</referenceTo>
    <relationshipLabel>Callbacks generados</relationshipLabel>
    <relationshipName>OM_Callbacks</relationshipName>
    <type>Lookup</type>
</CustomField>