force-app/main/default/objects/OM_Callback__c/recordTypes/OM_Callback.recordType-meta.xml
<RecordType>
    <fullName>OM_Callback</fullName>
    <active>true</active>
    <label>Callback</label>
</RecordType>