force-app/main/default/objects/OM_Callback__c/recordTypes/OM_OutboundCallback.recordType-meta.xml
<RecordType>
    <fullName>OM_OutboundCallback</fullName>
    <active>true</active>
    <label>Llamada Saliente</label>
</RecordType>