force-app/main/default/objects/OM_Callback__c/listViews/Callback.listView-meta.xml
<ListView>
    <fullName>Callback</fullName>
    <columns>NAME</columns>
    <columns>OM_Phone__c</columns>
    <columns>OM_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OM_Type__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>OM_Callback__c.OM_Callback</value>
    </filters>
    <label>Callback</label>
</ListView>