force-app/main/default/objects/OM_Callback__c/listViews/Llamadas_Salientes.listView-meta.xml
<ListView>
    <fullName>Llamadas_Salientes</fullName>
    <columns>NAME</columns>
    <columns>OM_Phone__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OM_Status__c</columns>
    <columns>OM_ScheduledDate__c</columns>
    <columns>OM_Type__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>OM_Callback__c.OM_OutboundCallback</value>
    </filters>
    <label>Llamadas Salientes</label>
</ListView>