force-app/main/default/objects/OM_Callback__c/listViews/SCV_CALL_BACK_ATC_TEC_OM_Callback.listView-meta.xml
<ListView>
    <fullName>SCV_CALL_BACK_ATC_TEC_OM_Callback</fullName>
    <columns>NAME</columns>
    <columns>OM_Account__c</columns>
    <columns>OM_OriginQueue__c</columns>
    <columns>OM_Status__c</columns>
    <columns>OM_ScheduledDate__c</columns>
    <columns>OM_StartDate__c</columns>
    <columns>OM_VoiceCall__c</columns>
    <columns>OM_Phone__c</columns>
    <columns>OM_Type__c</columns>
    <filterScope>Queue</filterScope>
    <label>CALL BACK ATC TEC</label>
    <queue>SCV_CALL_BACK_ATC_TEC</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>