force-app/main/default/objects/OM_Callback__c/listViews/SCV_CALL_BACK_EJEC_CTA_CLIENTE_OM_Callback.listView-meta.xml
<ListView>
    <fullName>SCV_CALL_BACK_EJEC_CTA_CLIENTE_OM_Callback</fullName>
    <filterScope>Queue</filterScope>
    <label>CALL BACK EJEC - CTA CLIENTE</label>
    <queue>SCV_CALL_BACK_EJEC_CTA_CLIENTE</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>