force-app/main/default/objects/OM_Callback__c/listViews/SCV_CALL_BACK_GESTION_DE_COBRO_OM_Callback.listView-meta.xml
<ListView>
    <fullName>SCV_CALL_BACK_GESTION_DE_COBRO_OM_Callback</fullName>
    <filterScope>Queue</filterScope>
    <label>CALL BACK GESTIÓN DE COBRO</label>
    <queue>SCV_CALL_BACK_GESTION_DE_COBRO</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>