force-app/main/default/objects/OM_Callback__c/listViews/SCV_CALL_BACK_JURA_DE_CUENTAS_OM_Callback.listView-meta.xml
<ListView>
    <fullName>SCV_CALL_BACK_JURA_DE_CUENTAS_OM_Callback</fullName>
    <filterScope>Queue</filterScope>
    <label>CALL BACK JURA DE CUENTAS</label>
    <queue>SCV_CALL_BACK_JURA_DE_CUENTAS</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>