force-app/main/default/objects/OM_Callback__c/listViews/SCV_CALL_BACK_OFI_ALBA_OM_Callback.listView-meta.xml
<ListView>
    <fullName>SCV_CALL_BACK_OFI_ALBA_OM_Callback</fullName>
    <filterScope>Queue</filterScope>
    <label>CALL BACK OFI ALBA</label>
    <queue>SCV_CALL_BACK_OFI_ALBA</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>